--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    display: none;
 }
 
 .menu-btn span {
@@ -62,6 +63,40 @@ a {
     width: 100%;
     height: 100%;
     background-color: rgb(29, 26, 27);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+#side-drawer:target {
+  display: block;
+}
+
+#side-drawer header {
+  height: 5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 5%;
+}
+
+#side-drawer ul {
+    list-style: none;
+    margin: 0;
+    padding: 4rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#side-drawer a {
+    color: rgb(253, 239, 213);
+    font-size: 2rem;
+}
+
+#side-drawer li {
+    margin: 1rem 0;
 }
 
 main h1 {
@@ -101,6 +136,10 @@ main h1 {
   text-align: center;
 }
 
+.food-item h2 {
+  margin: 0 0 1rem 0;
+}
+
 .btn {
   background-color: rgb(228, 157, 44);
   color: white;
@@ -115,6 +154,10 @@ main h1 {
 @media (max-width: 48rem) {
   #main-header nav {
     display: none;
+  }
+
+  .menu-btn {
+    display: flex;
   }
 
   main h1 {
